# usbd-human-interface-device

./: .gitignore  .prettierignore  .prettierrc.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  cspell.config.yaml  memory.x
.cargo/: config
.github/: dependabot.yml
.github/workflows/: audit.yml  example_build.yml  examples_rp2040_build.yml  examples_rp235x_build.yml  grcov.yml  lib_build.yml  lint_and_build.yml  lint_test.yml  test_and_lint.yml
examples/: Cargo.toml  Embed.toml  LICENSE  README.md  memory.x
examples/.cargo/: config
examples/.github/workflows/: audit.yml  lint_and_build.yml
examples/rp2040/: Cargo.toml
examples/rp2040/.cargo/: config.toml
examples/rp235x/: Cargo.toml  README.md
examples/rp235x/.cargo/: config.toml
examples/src/: lib.rs
lib/: Cargo.toml
lib/src/: lib.rs  page.rs  prelude.rs
lib/src/device/: consumer.rs  keyboard.rs  mouse.rs
lib/src/hid_class/: descriptor.rs  interface.rs  mod.rs  prelude.rs  test.rs
lib/src/interface/: managed.rs  mod.rs  raw.rs
src/: descriptor.rs  fmt.rs  interface.rs  lib.rs  logger.rs  main.rs  page.rs  panic.rs  prelude.rs  usage.rs  usb_class.rs
src/device/: consumer.rs  fido.rs  joystick.rs  keyboard.rs  mod.rs  mouse.rs  multiaxis.rs
src/device/keyboard/: descriptor.rs  mod.rs
src/device/mouse/: descriptor.rs  mod.rs
src/hid/: control.rs  mod.rs  test.rs
src/hid_class/: descriptor.rs  interface.rs  mod.rs  prelude.rs  test.rs
src/interface/: managed.rs  mod.rs  raw.rs
src/keyboard/: descriptors.rs  mod.rs
src/mouse/: descriptors.rs  mod.rs
src/usage/: mod.rs
