[package]
name = "usbd-hid-devices"
version = "0.1.0"
edition = "2021"
description = "Batteries included rust USB Hid library for usb-device"
keywords = ["no-std", "hid", "usb-device"]
authors = ["DLKJ"]
repository = "https://github.com/dlkj/usbd-hid-devices"
homepage = "https://github.com/dlkj/usbd-hid-devices"

[dependencies]
usb-device = "0.2"
embedded-time = "0.12"
log = "0.4"
packed_struct = { version = "0.10", default-features=false }

[dev-dependencies]

