[package]
name = "usbd-human-interface-device"
version = "0.1.1"
edition = "2021"
description = "Batteries included embedded USB HID library for usb-device. Includes concrete Keyboard (boot and NKRO), Mouse and Consumer Control implementations as well as support for building your own HID classes."
keywords = [ "hid", "usb-device", "usb", "keyboard", "mouse"]
categories = ["no-std", "embedded"]
authors = ["DLKJ"]
repository = "https://github.com/dlkj/usbd-human-interface-device"
homepage = "https://github.com/dlkj/usbd-human-interface-device"
documentation = "https://docs.rs/usbd-human-interface-device"
license = "MIT"

[dependencies]
usb-device = "0.2"
embedded-time = "0.12"
log = { version = "0.4", default-features = false }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.7"
frunk = { version = "0.4", default-features = false }
delegate = "0.6"
hash32 = "0.3"
hash32-derive = "0.1"
num_enum = { version = "0.5", default-features = false }

[dev-dependencies]
env_logger = "0.9.0"
