[package]
name = "usbd-human-interface-device"
version = "0.4.5"
edition = "2021"
description = "Batteries included embedded USB HID library for usb-device. Includes concrete Keyboard (boot and NKRO), Mouse, Joystick and Consumer Control implementations as well as support for building your own HID classes."
keywords = ["hid", "usb-device", "usb", "keyboard", "mouse"]
categories = ["no-std", "embedded"]
authors = ["DLKJ"]
repository = "https://github.com/dlkj/usbd-human-interface-device"
homepage = "https://github.com/dlkj/usbd-human-interface-device"
documentation = "https://docs.rs/usbd-human-interface-device"
license = "MIT"

[dependencies]
usb-device = "0.3"
log = { version = "0.4", optional = true }
defmt = { version = "0.3", optional = true }
packed_struct = { version = "0.10", default-features = false }
heapless = "0.8"
frunk = { version = "0.4", default-features = false }
num_enum = { version = "0.7", default-features = false }
fugit = "0.3"
option-block = "0.3"

[dev-dependencies]
env_logger = "0.10"
usbd-human-interface-device = { path = ".", features = ["log"] }

[features]
defmt = ["dep:defmt", "usb-device/defmt"]
