[package]
name = "usbd-hid-devices-example-rp2040"
version = "0.1.0"
edition = "2021"
authors = ["DLKJ"]
homepage = "https://github.com/dlkj/usbd-hid-devices-example-rp2040"
repository = "https://github.com/dlkj/usbd-hid-devices-example-rp2040"
description = "Example using the rust usbd-hid-devices library on the Raspberry Pi RP2040/Pico"
license = "MIT"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.0"
usb-device= "0.2.8"
sh1106 = "0.4.0"
embedded-hal = { version = "0.2.5", features=["unproven"] }
adafruit-macropad = { version = "0.1.0" }
rp2040-boot2 = { version = "0.2.0" }
embedded-time = "0.12.0"
embedded-graphics = "0.7.1"
embedded-text = {version = "0.5.0", default-features = false }
arrayvec = { version = "0.7.2", default-features = false }
log = "0.4.14"
nb = "1.0"
usbd-hid-devices = { git = "https://github.com/dlkj/usbd-hid-devices"}
panic-persist = { version = "0.3", features = ["utf8"] }
packed_struct = { version = "0.10", default-features = false }

#[patch."https://github.com/dlkj/usbd-hid-devices"]
#usbd-hid-devices = { path = "../usbd-hid-devices" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3