[package]
name = "usbd-human-interface-device-example-rp2040"
version = "0.1.0"
edition = "2021"
authors = ["DLKJ"]
description = "Example using the rust usbd-human-interface-device library on the Raspberry Pi RP2040/Pico"
license = "MIT"

[workspace]

[dependencies]
usbd-human-interface-device = { path = "..", features = ["defmt"]}
usb-device = "0.2"
packed_struct = { version = "0.10", default-features = false }
frunk = { version = "0.4", default-features = false }
fugit = "0.3"
cortex-m-rtic = "1.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2", features = ["unproven"] }
rp2040-monotonic = "1.2"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
rp-pico = "0.7"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
