[package]
name = "usbd-human-interface-device-example-rp235x"
version = "0.1.0"
edition = "2021"
authors = ["DLKJ"]
description = "Example using the rust usbd-human-interface-device library on the Raspberry Pi RP235x/Pico2"
license = "MIT"

[workspace]

[dependencies]
usbd-human-interface-device = { path = "../.." }
usb-device = "0.3"

cortex-m = "0.7.2"
cortex-m-rt = "0.7"
cortex-m-rtic = "1.1"
critical-section = { version = "1.2" }
defmt = "0.3"
defmt-rtt = "0.4"
dht-sensor = "0.2.1"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"
embedded_hal_0_2 = { package = "embedded-hal", version = "0.2.5", features = [
    "unproven",
] }
fugit = "0.3.6"
panic-halt = "1.0.0"
rp235x-hal = { version = "0.2.0", features = [
    "binary-info",
    "critical-section-impl",
    "rt",
    "defmt",
] }
